@@ -64,4 +64,4 @@
 
 (define pkg-authors '(robby))
 
-(define version "1.6")
+(define version "1.7")
